[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}
crossbeam-channel = "0.5"
log = "0.4"
tungstenite = { version = "0.20", default-features = false, features = ["handshake"] }

cobs = { path = "../cobs", optional = true, features = ["alloc"] }
protocol = { path = "../vex/protocol", optional = true }
serialport = { version = "4.2", optional = true }

[features]
default = ["coprocessor"]
coprocessor = ["dep:serialport", "dep:cobs", "dep:protocol"]
