[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
ciborium = "0.2"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
packed_struct = { version = "0.10.1", features = ["serde", "serde_derive", "use_serde"] }
serde = { version = "1.0", features = ["derive"] }
