[package]
name = "robotmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
client = { path = "../client", default-features = false }
common = { path = "../common" }
homedir = "0.2.1"
log = "0.4"
pnet = "0.33"
rustyline = "12.0"
serde = "1.0"
simple_logger = "4.2"
toml = "0.8"
