[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}

actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.2"
actix-ws = "0.2"

anyhow = "1.0"
futures = "0.3"
futures-channel = "0.3"
log = "0.4"
pnet = "0.33"
rand = "0.8"

[dependencies.tokio]
version = "1"
default-features = false
features = [ "macros", "net", "rt-multi-thread", "time" ]
