[package]
name = "pros-usb-minion"
version = "0.1.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2021"

[dependencies]
cobs = { path = "../../cobs" }
libc = { version = "0.2", default-features = false }
log = "0.4.19"
pros = { git = "https://github.com/serxka/pros-rs" }
pros-sys = { git = "https://github.com/serxka/pros-sys" }
protocol = { path = "../protocol" }

[workspace]
